# UML-Wars

./: CMakeLists.txt  README.md  UMLWars.cpp  UMLWars.h  UMLWarsApp.cpp  UMLWarsApp.h  main.cpp  pch.h
Tests/: CMakeLists.txt  ItemBoxTest.cpp  ItemHaroldTest.cpp  ItemPenTest.cpp  LoadTest.cpp  ScoreBoardTest.cpp
UMLWarsLib/: BoxClass.cpp  BoxClass.h  CMakeLists.txt  ElementHolder.cpp  ElementHolder.h  ElementHolderInheritance.cpp  ElementHolderInheritance.h  GraphicsItem.cpp  GraphicsItem.h  Item.cpp  Item.h  ItemBox.cpp  ItemBox.h  ItemBoxInheritance.cpp  ItemBoxInheritance.h  ItemHarold.cpp  ItemHarold.h  ItemPen.cpp  ItemPen.h  LoadXML.cpp  LoadXML.h  MainFrame.cpp  MainFrame.h  ScoreBoard.cpp  ScoreBoard.h  UMLWars.cpp  UMLWars.h  UMLWarsView.cpp  UMLWarsView.h  ids.h  pch.h
